figure spacing fixees

--- a/newamericadotorg/assets/react/program-page/components/About.scss
+++ b/newamericadotorg/assets/react/program-page/components/About.scss
@@ -17,4 +17,9 @@
     border-right: 1px solid #ddd;
     display: block;
   }
+
+  .figure.left{
+    margin-left: 0 !important;
+    max-width: 40% !important;
+  }
 }
